--- a/com.luizalabs.core/.classpath
+++ b/com.luizalabs.core/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/com.luizalabs.domain"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/com.luizalabs.domain"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
