--- a/com.luizalabs.web/.classpath
+++ b/com.luizalabs.web/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/com.luizalabs.domain"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/com.luizalabs.core"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
